--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -37,3 +37,13 @@ body {
   object-fit: cover;
   border-radius: 50%;
 }
+
+.message-input::placeholder {
+  color: rgba(0,0,0,.5);
+}
+
+.info-text {
+  color: rgba(0,0,0,.5);
+  text-align: center;
+  margin-bottom: .5rem;
+}
